# residual-gxe-former

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  ablation_gpu.yaml  ablation_v2_stage.yaml  baseline.yaml  fip1_external.yaml  g2f_main.yaml  g2f_main_gpu.yaml  g2f_v2_stage.yaml  plan_a_direct.yaml
docs/: 00_project_brief.md  01_research_design.md  02_data_schema.md  03_model_spec.md  04_experiment_plan.md  05_reporting_templates.md  06_fip1_notes.md  08_fip1_weather_validation.md
scripts/: 00_check_environment.py  01_prepare_g2f.py  02_make_splits.py  03_run_baselines.py  04_build_residual_targets.py  05_train_residual_gxe.py  06_run_ablation.py  06_run_ablations.py  07_make_reports.py  08_prepare_fip1_external.py  09_cross_dataset_benchmark.py  10_build_residual_gxe_atlas.py  11_summarize_residual_gxe_atlas.py  12_compare_residual_gxe_atlases.py  13_prepare_fip1_weather.py  14_make_atlas_figures.py  benchmark_10yr.py  benchmark_50k_final.py  causal_discovery.py  causal_prediction_benchmark.py  combined_benchmark.py  convert_competition_data.py  deploy_dnngp.py  download_g2f_2014_2019.py  experiment_combinations.py  extract_50k_markers.py  fip1_benchmark.py  generate_paper_figures.py  generate_supplementary.py  genomic_embeddings.py  launch_ablations.sh  launch_ablations_parallel.sh  launch_cf_dnngp.sh  launch_dnngp_only.sh  launch_parallel_v2.sh  launch_remaining.sh  ntv3_embeddings.py  optimal_markers.py  optimized_benchmark.py  optimized_benchmark_v2.py  (+9 more)
tests/: test_artifacts.py  test_atlas.py  test_fip1_adapter.py  (+8 more)
(+20 files in other folders)
